# Labs_Programming

./: README.md
Book_Labs/: MetIiPLR.doc
DopLab1/: CMakeLists.txt  DopLab1.cpp
Lab10/: CMakeLists.txt  Lab10.cpp  employees.txt
Lab2/: CMakeLists.txt  Lab2.cpp
Lab3/: CMakeLists.txt  Lab3.cpp
Lab6/: CMakeLists.txt  Lab6.cpp
Lab8/: CMakeLists.txt  Lab8.cpp
Lab9/: CMakeLists.txt  Lab9.cpp
